{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 6,
  "lineage": "16295df7-b9da-bf58-3054-92e0956c6c6f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rarego_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0130d8d35bcd2d433",
            "arn": "arn:aws:ec2:ap-northeast-2:823315816237:instance/i-0f2f59f3521dd6985",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2f59f3521dd6985",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "team3-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082f6f07a10336672",
            "private_dns": "ip-10-0-7-31.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.31",
            "public_dns": "ec2-52-78-240-121.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.240.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b5bdb82f697f69b5",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a2a6e8f1b3e8255",
            "tags": {
              "Name": "team3-server"
            },
            "tags_all": {
              "Name": "team3-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-005a4d6034e9ee79c"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823315816237:internet-gateway/igw-0fff236bbbb8bb1b0",
            "id": "igw-0fff236bbbb8bb1b0",
            "owner_id": "823315816237",
            "tags": {
              "Name": "team3-igw",
              "Team": "devcos-team03"
            },
            "tags_all": {
              "Name": "team3-igw",
              "Team": "devcos-team03"
            },
            "vpc_id": "vpc-03b79eeaf27277839"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823315816237:route-table/rtb-0cefaf46e659aa573",
            "id": "rtb-0cefaf46e659aa573",
            "owner_id": "823315816237",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fff236bbbb8bb1b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team3-rtb-public",
              "Team": "devcos-team03"
            },
            "tags_all": {
              "Name": "team3-rtb-public",
              "Team": "devcos-team03"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b79eeaf27277839"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823315816237:security-group/sg-005a4d6034e9ee79c",
            "description": "Security Group for Team3",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005a4d6034e9ee79c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Admin Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSL Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "team3-server-sg",
            "name_prefix": "",
            "owner_id": "823315816237",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "team3-server-sg",
              "Team": "devcos-team03"
            },
            "tags_all": {
              "Name": "team3-server-sg",
              "Team": "devcos-team03"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b79eeaf27277839"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823315816237:subnet/subnet-06a2a6e8f1b3e8255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a2a6e8f1b3e8255",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "823315816237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team3-subnet-public1-ap-northeast-2a",
              "Team": "devcos-team03"
            },
            "tags_all": {
              "Name": "team3-subnet-public1-ap-northeast-2a",
              "Team": "devcos-team03"
            },
            "vpc_id": "vpc-03b79eeaf27277839"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:823315816237:vpc/vpc-03b79eeaf27277839",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0270982b62000e62b",
            "default_route_table_id": "rtb-0038c8aa05e6f25f5",
            "default_security_group_id": "sg-028018bb784064a12",
            "dhcp_options_id": "dopt-0436a23cac04d52e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b79eeaf27277839",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0038c8aa05e6f25f5",
            "owner_id": "823315816237",
            "tags": {
              "Name": "team3-vpc",
              "Team": "devcos-team03"
            },
            "tags_all": {
              "Name": "team3-vpc",
              "Team": "devcos-team03"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}